# AviSynthPlus-MapNLQ

./: .gitmodules  CMakeLists.txt  README.md
msvc/: MapNLQ.sln  MapNLQ.vcxproj  MapNLQ.vcxproj.filters
src/: MapNLQ.cpp  MapNLQ.rc
